Fix media object

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -173,7 +173,7 @@ input[type="radio"] {
 }
 
 small {
-  font-size: 0.75rem;
+  font-size: 0.8em;
 }
 
 span {
@@ -2234,7 +2234,6 @@ a.box:active {
   text-align: center;
   vertical-align: top;
   width: 1.5rem;
-  background: coral;
 }
 
 .icon .fa {
@@ -3243,6 +3242,9 @@ a.box:active {
 .level-item {
   align-items: center;
   display: flex;
+  flex-basis: auto;
+  flex-grow: 0;
+  flex-shrink: 0;
   justify-content: center;
 }
 
@@ -3255,6 +3257,13 @@ a.box:active {
   .level-item:not(:last-child) {
     margin-bottom: 0.75rem;
   }
+}
+
+.level-left,
+.level-right {
+  flex-basis: auto;
+  flex-grow: 0;
+  flex-shrink: 0;
 }
 
 .level-left .level-item:not(:last-child),
@@ -3336,19 +3345,21 @@ a.box:active {
 
 .media-left,
 .media-right {
+  flex-basis: auto;
   flex-grow: 0;
   flex-shrink: 0;
 }
 
 .media-left {
-  margin-right: 0.75rem;
+  margin-right: 1rem;
 }
 
 .media-right {
-  margin-left: 0.75rem;
+  margin-left: 1rem;
 }
 
 .media-content {
+  flex-basis: auto;
   flex-grow: 1;
   flex-shrink: 1;
   text-align: left;
@@ -3361,7 +3372,7 @@ a.box:active {
 }
 
 .media .content:not(:last-child) {
-  margin-bottom: 1rem;
+  margin-bottom: 0.75rem;
 }
 
 .media .media {
