--- a/docs/documentation/components/card.html
+++ b/docs/documentation/components/card.html
@@ -17,7 +17,7 @@ doc-subtab: card
 <div class="card">
   <div class="card-image">
     <figure class="image is-4by3">
-      <img src="{{site.url}}/images/placeholders/300x225.png" alt="">
+      <img src="{{site.url}}/images/placeholders/300x225.png" alt="Image">
     </figure>
   </div>
   <div class="card-content">
@@ -35,8 +35,8 @@ doc-subtab: card
 
     <div class="content">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Phasellus nec iaculis mauris. <a href="#">@bulmaio</a>.
-      <a href="#">#css</a> <a href="#">#responsive</a>
+      Phasellus nec iaculis mauris. <a>@bulmaio</a>.
+      <a>#css</a> <a>#responsive</a>
       <br>
       <small>11:09 PM - 1 Jan 2016</small>
     </div>
@@ -71,7 +71,7 @@ doc-subtab: card
   <div class="card-content">
     <div class="content">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
-      <a href="#">@bulmaio</a>. <a href="#">#css</a> <a href="#">#responsive</a>
+      <a>@bulmaio</a>. <a>#css</a> <a>#responsive</a>
       <br>
       <small>11:09 PM - 1 Jan 2016</small>
     </div>
