--- a/docs/documentation/components/level.html
+++ b/docs/documentation/components/level.html
@@ -117,20 +117,28 @@ doc-subtab: level
 {% capture nav_centered_example %}
 <nav class="level">
   <div class="level-item has-text-centered">
-    <p class="heading">Tweets</p>
-    <p class="title">3,456</p>
+    <div>
+      <p class="heading">Tweets</p>
+      <p class="title">3,456</p>
+    </div>
   </div>
   <div class="level-item has-text-centered">
-    <p class="heading">Following</p>
-    <p class="title">123</p>
+    <div>
+      <p class="heading">Following</p>
+      <p class="title">123</p>
+    </div>
   </div>
   <div class="level-item has-text-centered">
-    <p class="heading">Followers</p>
-    <p class="title">456K</p>
+    <div>
+      <p class="heading">Followers</p>
+      <p class="title">456K</p>
+    </div>
   </div>
   <div class="level-item has-text-centered">
-    <p class="heading">Likes</p>
-    <p class="title">789</p>
+    <div>
+      <p class="heading">Likes</p>
+      <p class="title">789</p>
+    </div>
   </div>
 </nav>
 {% endcapture %}
@@ -143,7 +151,7 @@ doc-subtab: level
     <a class="link is-info">Menu</a>
   </p>
   <p class="level-item has-text-centered">
-    <img src="{{ site.url }}/images/bulma-type.png" alt="" style="height: 33px;">
+    <img src="{{ site.url }}/images/bulma-type.png" alt="" style="height: 30px;">
   </p>
   <p class="level-item has-text-centered">
     <a class="link is-info">Reservations</a>
@@ -175,20 +183,28 @@ doc-subtab: level
 {% capture nav_mobile_example %}
 <nav class="level is-mobile">
   <div class="level-item has-text-centered">
-    <p class="heading">Tweets</p>
-    <p class="title">3,456</p>
+    <div>
+      <p class="heading">Tweets</p>
+      <p class="title">3,456</p>
+    </div>
   </div>
   <div class="level-item has-text-centered">
-    <p class="heading">Following</p>
-    <p class="title">123</p>
+    <div>
+      <p class="heading">Following</p>
+      <p class="title">123</p>
+    </div>
   </div>
   <div class="level-item has-text-centered">
-    <p class="heading">Followers</p>
-    <p class="title">456K</p>
+    <div>
+      <p class="heading">Followers</p>
+      <p class="title">456K</p>
+    </div>
   </div>
   <div class="level-item has-text-centered">
-    <p class="heading">Likes</p>
-    <p class="title">789</p>
+    <div>
+      <p class="heading">Likes</p>
+      <p class="title">789</p>
+    </div>
   </div>
 </nav>
 {% endcapture %}
