--- a/sass/base/generic.sass
+++ b/sass/base/generic.sass
@@ -71,7 +71,7 @@ input[type="radio"]
   vertical-align: baseline
 
 small
-  font-size: $size-small
+  font-size: 0.8em
 
 span
   font-style: inherit
