--- a/sass/components/level.sass
+++ b/sass/components/level.sass
@@ -1,6 +1,9 @@
 .level-item
   align-items: center
   display: flex
+  flex-basis: auto
+  flex-grow: 0
+  flex-shrink: 0
   justify-content: center
   .title,
   .subtitle
@@ -12,6 +15,9 @@
 
 .level-left,
 .level-right
+  flex-basis: auto
+  flex-grow: 0
+  flex-shrink: 0
   .level-item
     &:not(:last-child)
       margin-right: 0.75rem
