--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -3439,7 +3439,7 @@ a.box:active {
 .menu-label {
   color: #7a7a7a;
   font-size: 0.8em;
-  letter-spacing: 1px;
+  letter-spacing: 0.1em;
   text-transform: uppercase;
 }
 
@@ -3776,6 +3776,7 @@ a.box:active {
 }
 
 .modal-card-body {
+  -webkit-overflow-scrolling: touch;
   background-color: white;
   flex-grow: 1;
   flex-shrink: 1;
@@ -6280,15 +6281,15 @@ label.panel-block:hover {
 
 .section {
   background-color: white;
-  padding: 40px 20px;
+  padding: 3rem 1.5rem;
 }
 
 @media screen and (min-width: 980px) {
   .section.is-medium {
-    padding: 120px 20px;
+    padding: 9rem 1.5rem;
   }
   .section.is-large {
-    padding: 240px 20px;
+    padding: 18rem 1.5rem;
   }
 }
 
