--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -147,6 +147,9 @@
   position: relative
   width: 1rem
 
+=overflow-touch
+  -webkit-overflow-scrolling: touch
+
 =overlay($offset: 0)
   bottom: $offset
   left: $offset
