--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -4120,7 +4120,7 @@ a.nav-item.is-tab.is-active {
 .pagination-previous:hover,
 .pagination-next:hover,
 .pagination-link:hover {
-  border-color: #00d1b2;
+  border-color: #b5b5b5;
   color: #363636;
 }
 
@@ -4133,7 +4133,6 @@ a.nav-item.is-tab.is-active {
 .pagination-previous:active,
 .pagination-next:active,
 .pagination-link:active {
-  background-color: whitesmoke;
   box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.2);
 }
 
@@ -4161,7 +4160,7 @@ a.nav-item.is-tab.is-active {
 }
 
 .pagination-ellipsis {
-  color: #7a7a7a;
+  color: #b5b5b5;
   pointer-events: none;
 }
 
