--- a/docs/documentation/layout/container.html
+++ b/docs/documentation/layout/container.html
@@ -23,7 +23,7 @@ doc-subtab: container
         <li><code>.section</code></li>
         <li><code>.footer</code></li>
       </ul>
-      <p>On <strong>mobile</strong> and <strong>tablet</strong>, the container will have a margin of <strong>20px</strong> on both the left and right sides.</p>
+      <p>On <strong>mobile</strong> and <strong>tablet</strong>, the container will have a margin of <strong>1.5rem</strong> on both the left and right sides.</p>
       <p>On <strong>desktop</strong> (> 980px), the container will have a maximum width of <strong>960px</strong> and will be <strong>horizontally centered</strong>.</p>
     </div>
   </div>
@@ -51,6 +51,7 @@ doc-subtab: container
       <p>If you don't want to have a maximum width but want to keep the 20px margin on the left and right sides, add the <code>is-fluid</code> modifier:</p>
     </div>
   </div>
+</section>
 
   <div class="example is-fullwidth">
     <div class="container is-fluid">
@@ -67,4 +68,3 @@ doc-subtab: container
   </div>
 </div>
 {% endhighlight %}
-</section>
