--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -233,31 +233,31 @@ table th {
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 979px) {
+@media screen and (min-width: 769px) and (max-width: 999px) {
   .is-block-tablet-only {
     display: block !important;
   }
 }
 
-@media screen and (max-width: 979px) {
+@media screen and (max-width: 999px) {
   .is-block-touch {
     display: block !important;
   }
 }
 
-@media screen and (min-width: 980px) {
+@media screen and (min-width: 1000px) {
   .is-block-desktop {
     display: block !important;
   }
 }
 
-@media screen and (min-width: 980px) and (max-width: 1179px) {
+@media screen and (min-width: 1000px) and (max-width: 1239px) {
   .is-block-desktop-only {
     display: block !important;
   }
 }
 
-@media screen and (min-width: 1180px) {
+@media screen and (min-width: 1240px) {
   .is-block-widescreen {
     display: block !important;
   }
@@ -279,31 +279,31 @@ table th {
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 979px) {
+@media screen and (min-width: 769px) and (max-width: 999px) {
   .is-flex-tablet-only {
     display: flex !important;
   }
 }
 
-@media screen and (max-width: 979px) {
+@media screen and (max-width: 999px) {
   .is-flex-touch {
     display: flex !important;
   }
 }
 
-@media screen and (min-width: 980px) {
+@media screen and (min-width: 1000px) {
   .is-flex-desktop {
     display: flex !important;
   }
 }
 
-@media screen and (min-width: 980px) and (max-width: 1179px) {
+@media screen and (min-width: 1000px) and (max-width: 1239px) {
   .is-flex-desktop-only {
     display: flex !important;
   }
 }
 
-@media screen and (min-width: 1180px) {
+@media screen and (min-width: 1240px) {
   .is-flex-widescreen {
     display: flex !important;
   }
@@ -325,31 +325,31 @@ table th {
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 979px) {
+@media screen and (min-width: 769px) and (max-width: 999px) {
   .is-inline-tablet-only {
     display: inline !important;
   }
 }
 
-@media screen and (max-width: 979px) {
+@media screen and (max-width: 999px) {
   .is-inline-touch {
     display: inline !important;
   }
 }
 
-@media screen and (min-width: 980px) {
+@media screen and (min-width: 1000px) {
   .is-inline-desktop {
     display: inline !important;
   }
 }
 
-@media screen and (min-width: 980px) and (max-width: 1179px) {
+@media screen and (min-width: 1000px) and (max-width: 1239px) {
   .is-inline-desktop-only {
     display: inline !important;
   }
 }
 
-@media screen and (min-width: 1180px) {
+@media screen and (min-width: 1240px) {
   .is-inline-widescreen {
     display: inline !important;
   }
@@ -371,31 +371,31 @@ table th {
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 979px) {
+@media screen and (min-width: 769px) and (max-width: 999px) {
   .is-inline-block-tablet-only {
     display: inline-block !important;
   }
 }
 
-@media screen and (max-width: 979px) {
+@media screen and (max-width: 999px) {
   .is-inline-block-touch {
     display: inline-block !important;
   }
 }
 
-@media screen and (min-width: 980px) {
+@media screen and (min-width: 1000px) {
   .is-inline-block-desktop {
     display: inline-block !important;
   }
 }
 
-@media screen and (min-width: 980px) and (max-width: 1179px) {
+@media screen and (min-width: 1000px) and (max-width: 1239px) {
   .is-inline-block-desktop-only {
     display: inline-block !important;
   }
 }
 
-@media screen and (min-width: 1180px) {
+@media screen and (min-width: 1240px) {
   .is-inline-block-widescreen {
     display: inline-block !important;
   }
@@ -417,31 +417,31 @@ table th {
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 979px) {
+@media screen and (min-width: 769px) and (max-width: 999px) {
   .is-inline-flex-tablet-only {
     display: inline-flex !important;
   }
 }
 
-@media screen and (max-width: 979px) {
+@media screen and (max-width: 999px) {
   .is-inline-flex-touch {
     display: inline-flex !important;
   }
 }
 
-@media screen and (min-width: 980px) {
+@media screen and (min-width: 1000px) {
   .is-inline-flex-desktop {
     display: inline-flex !important;
   }
 }
 
-@media screen and (min-width: 980px) and (max-width: 1179px) {
+@media screen and (min-width: 1000px) and (max-width: 1239px) {
   .is-inline-flex-desktop-only {
     display: inline-flex !important;
   }
 }
 
-@media screen and (min-width: 1180px) {
+@media screen and (min-width: 1240px) {
   .is-inline-flex-widescreen {
     display: inline-flex !important;
   }
@@ -501,31 +501,31 @@ table th {
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 979px) {
+@media screen and (min-width: 769px) and (max-width: 999px) {
   .is-hidden-tablet-only {
     display: none !important;
   }
 }
 
-@media screen and (max-width: 979px) {
+@media screen and (max-width: 999px) {
   .is-hidden-touch {
     display: none !important;
   }
 }
 
-@media screen and (min-width: 980px) {
+@media screen and (min-width: 1000px) {
   .is-hidden-desktop {
     display: none !important;
   }
 }
 
-@media screen and (min-width: 980px) and (max-width: 1179px) {
+@media screen and (min-width: 1000px) and (max-width: 1239px) {
   .is-hidden-desktop-only {
     display: none !important;
   }
 }
 
-@media screen and (min-width: 1180px) {
+@media screen and (min-width: 1240px) {
   .is-hidden-widescreen {
     display: none !important;
   }
@@ -1461,10 +1461,6 @@ a.box:active {
 
 .content:not(:last-child) {
   margin-bottom: 1.5rem;
-}
-
-.content a:not(.button):visited {
-  color: #b86bff;
 }
 
 .content li + li {
@@ -2802,7 +2798,7 @@ a.box:active {
   position: relative;
 }
 
-@media screen and (min-width: 980px) {
+@media screen and (min-width: 1000px) {
   .container {
     margin: 0 auto;
     max-width: 960px;
@@ -2813,7 +2809,7 @@ a.box:active {
   }
 }
 
-@media screen and (min-width: 1180px) {
+@media screen and (min-width: 1240px) {
   .container {
     max-width: 1200px;
   }
@@ -3959,7 +3955,7 @@ a.nav-item.is-tab.is-active {
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 979px) {
+@media screen and (min-width: 769px) and (max-width: 999px) {
   .nav-menu {
     padding-right: 1.5rem;
   }
@@ -4038,7 +4034,7 @@ a.nav-item.is-tab.is-active {
   box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1);
 }
 
-@media screen and (max-width: 979px) {
+@media screen and (max-width: 999px) {
   .nav > .container > .nav-left > .nav-item.is-brand:first-child,
   .container > .nav > .nav-left > .nav-item.is-brand:first-child {
     padding-left: 1.5rem;
@@ -4928,7 +4924,7 @@ label.panel-block:hover {
   }
 }
 
-@media screen and (min-width: 980px) {
+@media screen and (min-width: 1000px) {
   .column.is-narrow-desktop {
     flex: none;
   }
@@ -5057,7 +5053,7 @@ label.panel-block:hover {
   }
 }
 
-@media screen and (min-width: 1180px) {
+@media screen and (min-width: 1240px) {
   .column.is-narrow-widescreen {
     flex: none;
   }
@@ -5255,7 +5251,7 @@ label.panel-block:hover {
   }
 }
 
-@media screen and (min-width: 980px) {
+@media screen and (min-width: 1000px) {
   .columns.is-desktop {
     display: flex;
   }
@@ -5383,7 +5379,7 @@ label.panel-block:hover {
 }
 
 .hero-buttons {
-  margin-top: 20px;
+  margin-top: 1.5rem;
 }
 
 @media screen and (max-width: 768px) {
@@ -5391,7 +5387,7 @@ label.panel-block:hover {
     display: flex;
   }
   .hero-buttons .button:not(:last-child) {
-    margin-bottom: 10px;
+    margin-bottom: 0.75rem;
   }
 }
 
@@ -5401,19 +5397,20 @@ label.panel-block:hover {
     justify-content: center;
   }
   .hero-buttons .button:not(:last-child) {
-    margin-right: 20px;
+    margin-right: 1.5rem;
   }
 }
 
 .hero-head,
 .hero-foot {
+  flex-grow: 0;
   flex-shrink: 0;
 }
 
 .hero-body {
   flex-grow: 1;
   flex-shrink: 0;
-  padding: 40px 20px;
+  padding: 3rem 1.5rem;
 }
 
 @media screen and (min-width: 1240px) {
@@ -6252,15 +6249,15 @@ label.panel-block:hover {
 
 @media screen and (min-width: 769px) {
   .hero.is-medium .hero-body {
-    padding-bottom: 120px;
-    padding-top: 120px;
+    padding-bottom: 9rem;
+    padding-top: 9rem;
   }
 }
 
 @media screen and (min-width: 769px) {
   .hero.is-large .hero-body {
-    padding-bottom: 240px;
-    padding-top: 240px;
+    padding-bottom: 18rem;
+    padding-top: 18rem;
   }
 }
 
@@ -6283,7 +6280,7 @@ label.panel-block:hover {
   padding: 3rem 1.5rem;
 }
 
-@media screen and (min-width: 980px) {
+@media screen and (min-width: 1000px) {
   .section.is-medium {
     padding: 9rem 1.5rem;
   }
@@ -6294,547 +6291,5 @@ label.panel-block:hover {
 
 .footer {
   background-color: whitesmoke;
-  padding: 40px 20px 80px;
-}
-
-.footer a, .footer a:visited {
-  color: #4a4a4a;
-}
-
-.footer a:hover, .footer a:visited:hover {
-  color: #363636;
-}
-
-.footer a:not(.icon), .footer a:visited:not(.icon) {
-  border-bottom: 1px solid #dbdbdb;
-}
-
-.footer a:not(.icon):hover, .footer a:visited:not(.icon):hover {
-  border-bottom-color: #00d1b2;
-}
-
-@media screen and (min-width: 769px) {
-  .button small {
-    color: #4a4a4a;
-    left: 0;
-    margin-top: 10px;
-    position: absolute;
-    top: 100%;
-    width: 100%;
-  }
-}
-
-body.page-grid .column > .notification {
-  padding-left: 0;
-  padding-right: 0;
-  text-align: center;
-}
-
-@media screen and (min-width: 769px) {
-  .header-item .button + .button {
-    margin-left: 0.75rem;
-  }
-}
-
-svg {
-  max-height: 100%;
-  max-width: 100%;
-}
-
-#carbon {
-  max-width: 340px;
-  min-height: 130px;
-  padding: 15px;
-}
-
-@media screen and (min-width: 769px) {
-  #carbon {
-    margin-left: auto;
-    margin-right: auto;
-    width: 340px;
-  }
-}
-
-#carbonads {
-  text-align: left;
-}
-
-#carbonads a:hover {
-  text-decoration: underline;
-}
-
-#carbonads span {
-  display: block;
-}
-
-#carbonads .carbon-img {
-  float: left;
-  height: 100px;
-  width: 130px;
-}
-
-#carbonads .carbon-img img {
-  display: block;
-}
-
-#carbonads .carbon-text {
-  display: block;
-  color: #363636;
-  margin-left: 145px;
-}
-
-#carbonads .carbon-poweredby {
-  font-size: 0.75rem;
-  margin-left: 15px;
-}
-
-#github {
-  color: #333333;
-  border-color: #333333;
-}
-
-#github:hover {
-  background: #333333;
-  border-color: #333333;
-  color: white;
-}
-
-#twitter {
-  color: #55acee;
-  border-color: #55acee;
-}
-
-#twitter:hover {
-  background: #55acee;
-  border-color: #55acee;
-  color: white;
-}
-
-@keyframes floatUp {
-  0% {
-    box-shadow: 0 0 0 rgba(10, 10, 10, 0), 0 0 0 rgba(10, 10, 10, 0), 0 0 0 rgba(10, 10, 10, 0);
-    transform: scale(0.86);
-  }
-  67% {
-    box-shadow: 0 0 0 rgba(10, 10, 10, 0), 0 5px 10px rgba(10, 10, 10, 0.1), 0 1px 1px rgba(10, 10, 10, 0.2);
-    transform: scale(1);
-  }
-  100% {
-    box-shadow: 0 20px 60px rgba(10, 10, 10, 0.05), 0 5px 10px rgba(10, 10, 10, 0.1), 0 1px 1px rgba(10, 10, 10, 0.2);
-    transform: scale(1);
-  }
-}
-
-@keyframes strokePath {
-  from {
-    stroke-dashoffset: 880;
-  }
-  to {
-    stroke-dashoffset: 0;
-  }
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: scale(0.86);
-  }
-  to {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-
-@keyframes fadeOut {
-  0% {
-    opacity: 1;
-    transform: scale(0.86);
-  }
-  67% {
-    opacity: 1;
-    transform: scale(0.86);
-  }
-  100% {
-    opacity: 0;
-    transform: scale(1);
-  }
-}
-
-@keyframes slideDown {
-  0% {
-    opacity: 0;
-    transform: translateY(-10px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-@keyframes slideUp {
-  0% {
-    opacity: 0;
-    transform: translateY(10px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-#b {
-  animation-delay: 1s;
-  animation-duration: 1.5s;
-  animation-fill-mode: both;
-  animation-name: floatUp;
-  animation-timing-function: cubic-bezier(0, 0.71, 0.29, 1);
-  border-radius: 24px;
-  display: inline-block;
-  height: 240px;
-  margin-bottom: 40px;
-  position: relative;
-  vertical-align: top;
-  width: 240px;
-}
-
-#b svg {
-  bottom: 0;
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  display: block;
-  height: 240px;
-  width: 240px;
-}
-
-#b svg:first-child {
-  animation-duration: 1.5s;
-  animation-fill-mode: both;
-  animation-name: fadeOut;
-  animation-timing-function: cubic-bezier(0, 0.71, 0.29, 1);
-}
-
-#b svg:first-child g {
-  animation-duration: 1s;
-  animation-fill-mode: both;
-  animation-name: strokePath;
-  animation-timing-function: cubic-bezier(0, 0.71, 0.29, 1);
-  fill: none;
-  stroke: #00d1b2;
-  stroke-dasharray: 880;
-  stroke-width: 2px;
-}
-
-#b svg:last-child {
-  animation-delay: 1s;
-  animation-duration: 1s;
-  animation-fill-mode: both;
-  animation-name: fadeIn;
-  animation-timing-function: cubic-bezier(0, 0.71, 0.29, 1);
-}
-
-#b svg:last-child g {
-  fill: #00d1b2;
-}
-
-@media screen and (max-width: 768px) {
-  #b {
-    border-radius: 16px;
-    height: 160px;
-    width: 160px;
-  }
-}
-
-#bulma {
-  animation: slideDown 500ms both;
-  animation-delay: 1s;
-}
-
-#modern-framework {
-  animation: slideUp 500ms both;
-  animation-delay: 1.2s;
-}
-
-#npm {
-  animation: fadeIn 500ms both;
-  animation-delay: 1.4s;
-  margin: -10px 0 20px;
-}
-
-#npm code {
-  border-radius: 3px;
-  color: #00d1b2;
-  display: inline-block;
-  font-size: 16px;
-  padding: 16px 32px;
-}
-
-#ghbtns {
-  animation: slideDown 500ms both;
-  animation-delay: 1.6s;
-}
-
-html.route-index #carbon {
-  animation: slideUp 500ms both;
-  animation-delay: 1.8s;
-}
-
-#download {
-  animation: fadeIn 500ms both;
-  animation-delay: 2s;
-}
-
-#grid .notification {
-  padding-left: 0;
-  padding-right: 0;
-}
-
-#message {
-  display: none;
-}
-
-#tweet {
-  background: white;
-  border-radius: 5px;
-  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
-  padding: 1.5rem;
-}
-
-#mc_embed_signup .control {
-  margin-bottom: 0;
-}
-
-#mc_embed_signup .notification {
-  margin-top: 0.75rem;
-}
-
-#social {
-  align-items: center;
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 1em;
-  justify-content: center;
-}
-
-#social a {
-  display: inline-block;
-  font-size: 11px;
-  height: 20px;
-  line-height: 20px;
-  margin: 5px;
-}
-
-#social iframe {
-  margin: 5px;
-}
-
-#images tr td:nth-child(2) {
-  width: 320px;
-}
-
-.color {
-  display: inline-block;
-  float: left;
-  height: 18px;
-  margin-right: 5px;
-  width: 18px;
-}
-
-.example,
-.structure {
-  border: 1px solid #ffdd57;
-  border-top-right-radius: 3px;
-  color: rgba(0, 0, 0, 0.7);
-  padding: 1.25rem 1.5rem;
-  position: relative;
-}
-
-.example:not(:first-child),
-.structure:not(:first-child) {
-  margin-top: 2rem;
-}
-
-.example:not(:last-child),
-.structure:not(:last-child) {
-  margin-bottom: 1.5rem;
-}
-
-.example:before,
-.structure:before {
-  background: #ffdd57;
-  border-radius: 3px 3px 0 0;
-  bottom: 100%;
-  content: "Example";
-  display: inline-block;
-  font-size: 7px;
-  font-weight: bold;
-  left: -1px;
-  letter-spacing: 1px;
-  padding: 3px 5px;
-  position: absolute;
-  text-transform: uppercase;
-  vertical-align: top;
-}
-
-@media screen and (min-width: 769px) {
-  .example.is-fullwidth,
-  .structure.is-fullwidth {
-    border-left: none;
-    border-right: none;
-    padding: 0;
-  }
-}
-
-.example + .highlight {
-  border: 1px solid #ffdd57;
-  border-radius: 0 0 3px 3px;
-  border-top: none;
-  margin-top: -1.5rem;
-}
-
-.example + .highlight pre {
-  max-height: 600px;
-}
-
-.example + .highlight:not(:last-child) {
-  margin-bottom: 1.5rem;
-}
-
-.structure {
-  border-color: #ff3860;
-  border-radius: 3px;
-  padding: 1.5rem;
-}
-
-.structure:before {
-  background: #ff3860;
-  color: #fff;
-  content: "Structure";
-}
-
-.structure-item {
-  position: relative;
-}
-
-.structure-item:before {
-  bottom: 0;
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  background: rgba(10, 10, 10, 0.7);
-  background: whitesmoke;
-  border: 1px solid #dbdbdb;
-  content: "";
-  display: block;
-  z-index: 1;
-}
-
-.structure-item:after {
-  bottom: 0;
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  align-items: center;
-  content: attr(title);
-  display: flex;
-  font-family: "Inconsolata", "Consolas", "Monaco", monospace;
-  font-size: 11px;
-  justify-content: center;
-  padding: 3px 5px;
-  z-index: 2;
-}
-
-.structure-item.is-structure-container {
-  padding: 1.5rem 0.75rem 0.75rem;
-}
-
-.structure-item.is-structure-container:after {
-  align-items: flex-start;
-  justify-content: flex-start;
-  padding: 0.5rem 0.75rem;
-}
-
-.highlight {
-  position: relative;
-}
-
-.highlight .copy,
-.highlight .expand {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  background: white;
-  border: solid #dbdbdb;
-  border-width: 0 0 1px 1px;
-  color: #7a7a7a;
-  cursor: pointer;
-  outline: none;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-.highlight .copy:hover,
-.highlight .expand:hover {
-  border-color: #ff3860;
-  color: #ff3860;
-}
-
-.highlight .expand {
-  border-right-width: 1px;
-  right: 50px;
-}
-
-@media screen and (min-width: 769px) {
-  .highlight pre {
-    white-space: pre-wrap;
-  }
-}
-
-@media screen and (min-width: 769px) {
-  .section:not(.is-fullwidth) > .example:not(.is-fullwidth) {
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
-  }
-  .section:not(.is-fullwidth) > .example:not(.is-fullwidth) + .highlight {
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
-  }
-}
-
-.section.is-fullwidth {
-  padding: 0 !important;
-}
-
-.section.is-fullwidth .example {
-  border-left: none;
-  border-radius: 0;
-  border-right: none;
-  padding: 0;
-}
-
-.section.is-fullwidth .example + .highlight {
-  border-left: none;
-  border-radius: 0;
-  border-right: none;
-}
-
-#newsletter .input {
-  border-color: white;
-  box-shadow: none;
-}
-
-html ::-moz-selection {
-  background: #00d1b2;
-  color: #fff;
-}
-
-html ::selection {
-  background: #00d1b2;
-  color: #fff;
+  padding: 3rem 1.5rem 6rem;
 }
