--- a/sass/elements/other.sass
+++ b/sass/elements/other.sass
@@ -5,13 +5,13 @@
   position: relative
   +desktop
     margin: 0 auto
-    max-width: 960px
+    max-width: $desktop - 40px
     // Modifiers
     &.is-fluid
       margin: 0 1.5rem
       max-width: none
   +widescreen
-    max-width: 1200px
+    max-width: $widescreen - 40px
 
 .delete
   +delete
