--- a/docs/documentation/components/card.html
+++ b/docs/documentation/components/card.html
@@ -17,18 +17,18 @@ doc-subtab: card
 <div class="card">
   <div class="card-image">
     <figure class="image is-4by3">
-      <img src="{{site.url}}/images/placeholders/300x225.png" alt="Image">
+      <img src="{{site.url}}/images/placeholders/1280x960.png" alt="Image">
     </figure>
   </div>
   <div class="card-content">
     <div class="media">
       <div class="media-left">
-        <figure class="image is-32x32">
-          <img src="{{site.url}}/images/placeholders/64x64.png" alt="Image">
+        <figure class="image" style="height: 40px; width: 40px;">
+          <img src="{{site.url}}/images/placeholders/96x96.png" alt="Image">
         </figure>
       </div>
       <div class="media-content">
-        <p class="title is-5">John Smith</p>
+        <p class="title is-4">John Smith</p>
         <p class="subtitle is-6">@johnsmith</p>
       </div>
     </div>
