Remove highlight, Fix messages

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -2979,6 +2979,7 @@ a.box:active {
 .card-footer-item {
   align-items: center;
   display: flex;
+  flex-basis: 0;
   flex-grow: 1;
   flex-shrink: 0;
   justify-content: center;
@@ -2999,235 +3000,6 @@ a.box:active {
 
 .card .media:not(:last-child) {
   margin-bottom: 0.75rem;
-}
-
-.card.is-rounded {
-  border-radius: 5px;
-}
-
-.highlight {
-  background-color: #fdf6e3;
-  color: #586e75;
-}
-
-.highlight .c {
-  color: #93a1a1;
-}
-
-.highlight .err,
-.highlight .g {
-  color: #586e75;
-}
-
-.highlight .k {
-  color: #859900;
-}
-
-.highlight .l,
-.highlight .n {
-  color: #586e75;
-}
-
-.highlight .o {
-  color: #859900;
-}
-
-.highlight .x {
-  color: #cb4b16;
-}
-
-.highlight .p {
-  color: #586e75;
-}
-
-.highlight .cm {
-  color: #93a1a1;
-}
-
-.highlight .cp {
-  color: #859900;
-}
-
-.highlight .c1 {
-  color: #93a1a1;
-}
-
-.highlight .cs {
-  color: #859900;
-}
-
-.highlight .gd {
-  color: #2aa198;
-}
-
-.highlight .ge {
-  color: #586e75;
-  font-style: italic;
-}
-
-.highlight .gr {
-  color: #dc322f;
-}
-
-.highlight .gh {
-  color: #cb4b16;
-}
-
-.highlight .gi {
-  color: #859900;
-}
-
-.highlight .go,
-.highlight .gp {
-  color: #586e75;
-}
-
-.highlight .gs {
-  color: #586e75;
-  font-weight: bold;
-}
-
-.highlight .gu {
-  color: #cb4b16;
-}
-
-.highlight .gt {
-  color: #586e75;
-}
-
-.highlight .kc {
-  color: #cb4b16;
-}
-
-.highlight .kd {
-  color: #268bd2;
-}
-
-.highlight .kn,
-.highlight .kp {
-  color: #859900;
-}
-
-.highlight .kr {
-  color: #268bd2;
-}
-
-.highlight .kt {
-  color: #dc322f;
-}
-
-.highlight .ld {
-  color: #586e75;
-}
-
-.highlight .m,
-.highlight .s {
-  color: #2aa198;
-}
-
-.highlight .na {
-  color: #B58900;
-}
-
-.highlight .nb {
-  color: #586e75;
-}
-
-.highlight .nc {
-  color: #268bd2;
-}
-
-.highlight .no {
-  color: #cb4b16;
-}
-
-.highlight .nd {
-  color: #268bd2;
-}
-
-.highlight .ni,
-.highlight .ne {
-  color: #cb4b16;
-}
-
-.highlight .nf {
-  color: #268bd2;
-}
-
-.highlight .nl,
-.highlight .nn,
-.highlight .nx,
-.highlight .py {
-  color: #586e75;
-}
-
-.highlight .nt,
-.highlight .nv {
-  color: #268bd2;
-}
-
-.highlight .ow {
-  color: #859900;
-}
-
-.highlight .w {
-  color: #586e75;
-}
-
-.highlight .mf,
-.highlight .mh,
-.highlight .mi,
-.highlight .mo {
-  color: #2aa198;
-}
-
-.highlight .sb {
-  color: #93a1a1;
-}
-
-.highlight .sc {
-  color: #2aa198;
-}
-
-.highlight .sd {
-  color: #586e75;
-}
-
-.highlight .s2 {
-  color: #2aa198;
-}
-
-.highlight .se {
-  color: #cb4b16;
-}
-
-.highlight .sh {
-  color: #586e75;
-}
-
-.highlight .si,
-.highlight .sx {
-  color: #2aa198;
-}
-
-.highlight .sr {
-  color: #dc322f;
-}
-
-.highlight .s1,
-.highlight .ss {
-  color: #2aa198;
-}
-
-.highlight .bp,
-.highlight .vc,
-.highlight .vg,
-.highlight .vi {
-  color: #268bd2;
-}
-
-.highlight .il {
-  color: #2aa198;
 }
 
 .level-item {
@@ -3590,8 +3362,13 @@ a.box:active {
   position: relative;
 }
 
+.message-header a,
 .message-header strong {
   color: inherit;
+}
+
+.message-header a {
+  text-decoration: underline;
 }
 
 .message-header .delete {
@@ -3601,7 +3378,8 @@ a.box:active {
 }
 
 .message-header + .message-body {
-  border-radius: 0 0 3px 3px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
   border-top: none;
 }
 
@@ -3612,8 +3390,13 @@ a.box:active {
   padding: 1em 1.25em;
 }
 
+.message-body a,
 .message-body strong {
   color: inherit;
+}
+
+.message-body a {
+  text-decoration: underline;
 }
 
 .message-body code,
@@ -6287,6 +6070,231 @@ label.panel-block:hover {
 .footer {
   background-color: whitesmoke;
   padding: 3rem 1.5rem 6rem;
+}
+
+.highlight {
+  background-color: #fdf6e3;
+  color: #586e75;
+}
+
+.highlight .c {
+  color: #93a1a1;
+}
+
+.highlight .err,
+.highlight .g {
+  color: #586e75;
+}
+
+.highlight .k {
+  color: #859900;
+}
+
+.highlight .l,
+.highlight .n {
+  color: #586e75;
+}
+
+.highlight .o {
+  color: #859900;
+}
+
+.highlight .x {
+  color: #cb4b16;
+}
+
+.highlight .p {
+  color: #586e75;
+}
+
+.highlight .cm {
+  color: #93a1a1;
+}
+
+.highlight .cp {
+  color: #859900;
+}
+
+.highlight .c1 {
+  color: #93a1a1;
+}
+
+.highlight .cs {
+  color: #859900;
+}
+
+.highlight .gd {
+  color: #2aa198;
+}
+
+.highlight .ge {
+  color: #586e75;
+  font-style: italic;
+}
+
+.highlight .gr {
+  color: #dc322f;
+}
+
+.highlight .gh {
+  color: #cb4b16;
+}
+
+.highlight .gi {
+  color: #859900;
+}
+
+.highlight .go,
+.highlight .gp {
+  color: #586e75;
+}
+
+.highlight .gs {
+  color: #586e75;
+  font-weight: bold;
+}
+
+.highlight .gu {
+  color: #cb4b16;
+}
+
+.highlight .gt {
+  color: #586e75;
+}
+
+.highlight .kc {
+  color: #cb4b16;
+}
+
+.highlight .kd {
+  color: #268bd2;
+}
+
+.highlight .kn,
+.highlight .kp {
+  color: #859900;
+}
+
+.highlight .kr {
+  color: #268bd2;
+}
+
+.highlight .kt {
+  color: #dc322f;
+}
+
+.highlight .ld {
+  color: #586e75;
+}
+
+.highlight .m,
+.highlight .s {
+  color: #2aa198;
+}
+
+.highlight .na {
+  color: #B58900;
+}
+
+.highlight .nb {
+  color: #586e75;
+}
+
+.highlight .nc {
+  color: #268bd2;
+}
+
+.highlight .no {
+  color: #cb4b16;
+}
+
+.highlight .nd {
+  color: #268bd2;
+}
+
+.highlight .ni,
+.highlight .ne {
+  color: #cb4b16;
+}
+
+.highlight .nf {
+  color: #268bd2;
+}
+
+.highlight .nl,
+.highlight .nn,
+.highlight .nx,
+.highlight .py {
+  color: #586e75;
+}
+
+.highlight .nt,
+.highlight .nv {
+  color: #268bd2;
+}
+
+.highlight .ow {
+  color: #859900;
+}
+
+.highlight .w {
+  color: #586e75;
+}
+
+.highlight .mf,
+.highlight .mh,
+.highlight .mi,
+.highlight .mo {
+  color: #2aa198;
+}
+
+.highlight .sb {
+  color: #93a1a1;
+}
+
+.highlight .sc {
+  color: #2aa198;
+}
+
+.highlight .sd {
+  color: #586e75;
+}
+
+.highlight .s2 {
+  color: #2aa198;
+}
+
+.highlight .se {
+  color: #cb4b16;
+}
+
+.highlight .sh {
+  color: #586e75;
+}
+
+.highlight .si,
+.highlight .sx {
+  color: #2aa198;
+}
+
+.highlight .sr {
+  color: #dc322f;
+}
+
+.highlight .s1,
+.highlight .ss {
+  color: #2aa198;
+}
+
+.highlight .bp,
+.highlight .vc,
+.highlight .vg,
+.highlight .vi {
+  color: #268bd2;
+}
+
+.highlight .il {
+  color: #2aa198;
 }
 
 @media screen and (min-width: 769px) {
