--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -35,6 +35,7 @@
 .card-footer-item
   align-items: center
   display: flex
+  flex-basis: 0
   flex-grow: 1
   flex-shrink: 0
   justify-content: center
@@ -50,6 +51,3 @@
   position: relative
   .media:not(:last-child)
     margin-bottom: 0.75rem
-  // Modifiers
-  &.is-rounded
-    border-radius: $radius-large
