--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -94,7 +94,7 @@ th {
 }
 
 html {
-  background-color: whitesmoke;
+  background-color: white;
   font-size: 14px;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
@@ -3714,6 +3714,13 @@ a.nav-item.is-tab.is-active {
   padding-bottom: calc(0.5rem - 3px);
 }
 
+@media screen and (min-width: 1000px) {
+  .nav-item a.is-brand,
+  a.nav-item.is-brand {
+    padding-left: 0;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .nav-menu {
     background-color: white;
@@ -3792,31 +3799,8 @@ a.nav-item.is-tab.is-active {
   width: 100%;
 }
 
-.nav > .container > .nav-left > .nav-item:first-child:not(.is-tab) {
-  padding-left: 0;
-}
-
-.nav > .container > .nav-right > .nav-item:last-child:not(.is-tab) {
-  padding-right: 0;
-}
-
-.container > .nav > .nav-left > .nav-item:first-child:not(.is-tab) {
-  padding-left: 0;
-}
-
-.container > .nav > .nav-right > .nav-item:last-child:not(.is-tab) {
-  padding-right: 0;
-}
-
 .nav.has-shadow {
   box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1);
-}
-
-@media screen and (max-width: 999px) {
-  .nav > .container > .nav-left > .nav-item.is-brand:first-child,
-  .container > .nav > .nav-left > .nav-item.is-brand:first-child {
-    padding-left: 1.5rem;
-  }
 }
 
 .pagination,
