--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,11 +1,7 @@
 <nav class="nav">
   <div class="nav-left">
-    <a class="nav-item is-brand" href="{{ site.url }}/">
-      {% if page.route == 'index' %}
-        <img src="{{ site.url }}/images/bulma-type.png" alt="{{ site.title }}">
-      {% else %}
-        <img src="{{ site.url }}/images/bulma-type-white.png" alt="{{ site.title }}">
-      {% endif %}
+    <a class="nav-item is-brand" href="{{ site.url }}">
+      <img src="{{ site.url }}/images/bulma-logo.png" alt="{{ site.title }}">
     </a>
   </div>
 
@@ -43,7 +39,7 @@
       Blog
     </a>
 
-    {% if page.route == 'index' %}
+    {% if page.route != 'nothing' %}
       <span class="nav-item">
         <a id="twitter"
           class="button"
